<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enterTextHintText"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textFieldErrorLabel"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="181dp"
        android:text="@string/enterTextbuttonText"
        app:layout_constraintBottom_toTopOf="@+id/goBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enteredTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="479dp"
        android:text="@string/enteredTextLabelText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="351dp"
        android:text="@string/textFieldPageGoBackButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredTextLabel" />

    <TextView
        android:id="@+id/textFieldErrorLabel"
        android:layout_width="210dp"
        android:layout_height="17dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="49dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/enteredTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />
</androidx.constraintlayout.widget.ConstraintLayout>